# teo-blender-models

./: .gitignore  README.md
doc/: teo-robot-control-instructions.md  teo-robot-control-videos.md
scripts/python/: teo-robot-control.py
src/cpp/: CMakeLists.txt  launchTrajectory.cpp
src/python/: teo-robot-control-manual.py  teo-robot-control-mocap.py
